--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -4,119 +4,83 @@
 
 body {
     overflow-x: hidden;
+    background: url("img/banner.png") no-repeat center;
+
 }
+
 /*navigation bar*/
 .navbar {
-    background-color: #f1486f;
+    background: url("img/banner.png") no-repeat center;
     border-radius: 0;
+    border:0;
+    height:80px;
     width: 100%;
-    margin-bottom: -1px;
 }
-
-.fa-bars, .fa-star-o, .fa-list {
-    color: #fff;
+.navbar i{
+    margin:0;
+    line-height: 40px;
+    font-size: 24px;
+    color: #f7f7f8;
 }
-
-nav ul, li {
-    display: inline-block;
-    margin-top: 0;
-    padding-top: 0;
-    margin-left: 4%;
-}
-
-nav li {
-    float: left;
-}
-
-nav ul {
-    margin-top: 0;
-    padding-top: 0;
-    margin-bottom: 0;
-    min-width: 00px;
-    max-width: 600px;
-}
-
-.navbar-nav {
-    line-height: 0;
-    margin-bottom: 0;
-}
-
-.navbar-brand {
-    line-height: 26px;
-}
-
-nav p {
-    margin-bottom: 0;
-    color: #fff;
-}
-
-.navbar-nav>li>a {
-    padding-top: 0;
-    padding-bottom: 0;
-    line-height: 20px;
-}
-
-.navbar-nav>li:nth-child(1)>a {
-    padding-top: 8px;
-}
-
-.navbar-nav>li:nth-child(4)>a {
-    padding-top: 8px;
-}
-
-.navbar-nav>li:nth-child(5)>a {
-    padding-top: 8px;
-}
-
-.navbar-header .ul {
-    display:inline-block;
-}
-
-/*table*/
-table {
-    padding-top: 0;
-    text-align: center;
-}
-
-th {
-    color: dimgrey;
-    text-align: center;
-    background-color: #ffd966;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 0;
-}
-
-.name {
-    color: dimgrey;
-}
-
-td p {
-    margin: 0;
-}
-
-td h5 {
-    margin-bottom :0;
-}
-
-td:not(:nth-child(1))  {
-    margin-right: 4px;
-    background-color: #ffd966;
-    border: 5px solid white;
-}
-
-td:nth-child(1) {
-    border-top: 5px solid white
-}
-
-.active {
-    background-color: yellow;
-}
-
-li>i{
-    float: right;
-}
-
-#stage2:hover{
+#linna:hover{
     fill: #f1486f;
+}
+#Layer_1:hover{
+    /*transform: scale(1.5);*/
+    fill: #f1486f;
+    border: 1px solid #f1486f;
+}
+.wrapper{
+    position:absolute;
+    z-index:3;
+    height: 100vh;
+    width: 100vw;
+}
+#content{
+    width: 100vw;
+    height: 100vh;
+    position:absolute;
+    top:0;
+    left:0;
+    margin:0;
+    padding:0;
+}
+#menu{
+    text-align: center;
+    position: absolute;
+    z-index: 4;
+    min-height: 100vh;
+    top:0;
+    left:-110px;
+    width:110px;
+    background-color: #3d3d3c;
+    color: #fff;
+}
+#menu ul{
+    margin-top: 40px;
+    padding: 0;
+}
+#menu ul li{
+    display: block;
+    background-color: #f7f7f8;
+    border-radius: 100%;
+    margin: 25px auto;
+    height: 65px;
+    width: 65px;
+}
+#menu ul li i{
+    font-size: 30px;
+    color: #3d3d3c;
+    display: block;
+    line-height: 65px;
+}
+
+#closeMenu {
+    display:none;
+    position: absolute;
+    top:0;
+    left:0;
+    height: 100%;
+    width:100%;
+    z-index: 3;
 }
