--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -4,8 +4,6 @@
 
 body {
     overflow-x: hidden;
-    background: url("img/banner.png") no-repeat center;
-
 }
 
 /*navigation bar*/
@@ -33,32 +31,29 @@ body {
 .wrapper{
     position:absolute;
     z-index:3;
+    left: -110px;
     height: 100vh;
     width: 100vw;
 }
 #content{
+	position: absolute;
+	top:0;
+	left: 110px;
     width: 100vw;
     height: 100vh;
-    position:absolute;
-    top:0;
-    left:0;
     margin:0;
     padding:0;
 }
 #menu{
     text-align: center;
-    position: absolute;
     z-index: 4;
     min-height: 100vh;
-    top:0;
-    left:-110px;
     width:110px;
     background-color: #3d3d3c;
     color: #fff;
 }
 #menu ul{
-    margin-top: 40px;
-    padding: 0;
+    padding: 40px 0 0 0;
 }
 #menu ul li{
     display: block;
