--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -4,11 +4,12 @@
 
 body {
     overflow-x: hidden;
+	font: 15px arial, sans-serif;
 }
 
 /*navigation bar*/
 .navbar {
-    background: url("img/banner.png") no-repeat center;
+    background: #f1486f;
     border-radius: 0;
     border:0;
     height:80px;
@@ -31,14 +32,14 @@ body {
 .wrapper{
     position:absolute;
     z-index:3;
-    left: -110px;
+    left: -7.2em;
     height: 100vh;
     width: 100vw;
 }
 #content{
 	position: absolute;
 	top:0;
-	left: 110px;
+	left: 7.2em;
     width: 100vw;
     height: 100vh;
     margin:0;
@@ -48,7 +49,7 @@ body {
     text-align: center;
     z-index: 4;
     min-height: 100vh;
-    width:110px;
+    width: 7.2em;
     background-color: #3d3d3c;
     color: #fff;
 }
@@ -60,14 +61,16 @@ body {
     background-color: #f7f7f8;
     border-radius: 100%;
     margin: 25px auto;
-    height: 65px;
-    width: 65px;
+    height: 4.8em;
+    width: 4.8em;
 }
 #menu ul li i{
-    font-size: 30px;
+    font-size: 2em;
+	line-height: 2.4em;
     color: #3d3d3c;
     display: block;
-    line-height: 65px;
+}
+#menu ul li i:before{
 }
 
 #closeMenu {
