--- a/www/css/carousel.css
+++ b/www/css/carousel.css
@@ -1,31 +1,37 @@
 html,
 body {
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
-
-.carousel,
-.item,
-.active {
-    height: 500px;
-}
-
 .carousel-inner {
     height: 100%;
 }
 .carousel-caption {
-
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100vw;
+    height:30vh;
+    padding: 0;
+    bottom: -22vh;
+    left:0;
+}
+.carousel-caption h3{
+    min-height: 8vh;
+    font-size: 1.5em;
+}
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+    background-color: none;
 }
 
-
 .fill {
-  min-width: 100%;
-    min-height: 100%;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 88vh;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: contain;
+    background-size: cover;
     -o-background-size: cover;
 }
