--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -14,7 +14,7 @@ body {
     background: #f1486f;
     border-radius: 0;
     border:0;
-    height:80px;
+    height:12vh;
     width: 100%;
 	z-index: 2;
 	/*box-shadow: 0px 8px 20px #ccc;*/
@@ -37,7 +37,7 @@ body {
     position:absolute;
     z-index:3;
     left: -7.2em;
-    height: 100vh;
+    height: 88vh;
     width: 100vw;
 }
 #content{
@@ -57,13 +57,11 @@ body {
 .container{
 	position: absolute;
 	text-align: center;
-	width: 90%;
-	min-height: 100%;
+	width: 100%;
+	height: 88vh;
 	top: 0;
 	padding: 0;
-	margin-top: 100px;
-	margin-left: 25px;
-	margin-right: 25px;
+	margin-top: 12vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	z-index:1;
