--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -1,3 +1,35 @@
+@font-face {
+  font-family: 'GlacialIndifference';
+  src: url('../fonts/GlacialIndifference-Regular.otf') format('opentype');
+}
+@font-face {
+  font-family: 'Gilroy-Light';
+  src: url('../fonts/Gilroy-Light.otf') format('opentype');
+}
+@font-face {
+  font-family: 'Gilroy-ExtraBold';
+  src: url('../fonts/Gilroy-ExtraBold.otf') format('opentype');
+}
+
+html,
+body {
+    font-family: 'GlacialIndifference', Fallback, sans-serif;
+    min-height: 100vh;
+    min-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Gilroy-Light', Fallback, sans-serif;
+}
+.h1, .h2, h1, h2{
+    font-family: 'Gilroy-ExtraBold', Fallback, sans-serif;
+}
+.p, .span, .input, p, span, input, div {
+    font-family: 'GlacialIndifference', Fallback, sans-serif;
+    font-size: 4.5vw;
+    font-weight: 400;
+}
 ::-webkit-scrollbar {
     display: none;
 }
@@ -11,22 +43,31 @@ body {
 .navbar {
 	position: absolute;
 	top:0;
-    background: #f1486f;
+    background: #e64696;
     border-radius: 0;
     border:0;
-    height:12vh;
-    width: 100%;
+    height: 9vh;
+    min-height: 40px;
+    width: 100vw;
 	z-index: 2;
 	/*box-shadow: 0px 8px 20px #ccc;*/
 }
-.navbar i{
+.navbar a{
+    height: 100%;
     margin:0;
-    line-height: 40px;
-    font-size: 24px;
+    padding: 0;
+    text-align: center
+}
+
+.navbar i{
+    padding: auto;
+    font-size: 5.5vw;
+    line-height:9vh;
+    width: 10vw;
     color: #f7f7f8;
 }
 #linna:hover{
-    fill: #f1486f;
+    fill: #e64696;
 }
 #Layer_1:hover{
     /*transform: scale(1.5);*/
@@ -36,8 +77,8 @@ body {
 .wrapper{
     position:absolute;
     z-index:3;
-    left: -7.2em;
-    height: 88vh;
+    left: -15vw;
+    height: 100vh;
     width: 100vw;
 }
 #content{
@@ -46,7 +87,7 @@ body {
 	background-position: top center;*/
 	position: absolute;
 	top:0;
-	left: 7.2em;
+	left: 15vw;
     width: 100vw;
     min-height: 100vh;
     margin:0;
@@ -58,10 +99,10 @@ body {
 	position: absolute;
 	text-align: center;
 	width: 100%;
-	height: 88vh;
+	height: 91vh;
 	top: 0;
 	padding: 0;
-	margin-top: 12vh;
+	margin-top: 9vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	z-index:1;
@@ -70,25 +111,26 @@ body {
     text-align: center;
     z-index: 4;
     min-height: 100vh;
-    width: 7.2em;
+    width: 15vw;
     background-color: #3d3d3c;
     color: #fff;
 }
 #menu ul{
-    padding: 40px 0 0 0;
+    padding: 9vh 0 0 0;
 }
 #menu ul li{
     display: block;
-    background-color: #f7f7f8;
-    border-radius: 100%;
-    margin: 25px auto;
-    height: 4.8em;
-    width: 4.8em;
+    margin: 0 auto;
+    height: 13vh;
+    width: 100%;
+}
+#menu ul li:last-child{
+    border:none;
 }
 #menu ul li i{
-    font-size: 2em;
-	line-height: 2.4em;
-    color: #3d3d3c;
+    font-size: 4.5vh;
+	line-height: 13vh;
+    color: #fff;
     display: block;
 }
 #menu ul li i:before{
