--- a/www/css/carousel.css
+++ b/www/css/carousel.css
@@ -10,12 +10,13 @@ body {
 }
 .carousel-header{
     position: absolute;
-    top:3vh;
-    left:8vw;
+    top: 3vh;
+    left: 8vw;
 }
 .carousel-header h2{
     background-color: rgba(255, 255, 255, 0.6);
     padding: 1vmin;
+	max-width: 80vw;
     font-size: 8vw;
     text-align: left;
     font-weight: bold;
@@ -25,6 +26,7 @@ body {
 .carousel-header h3{
     background-color: rgba(255, 255, 255, 0.6);
     padding: 1vmin;
+	max-width: 80vw;
     margin:0;
     color: #000;
     text-align: left;
@@ -34,28 +36,31 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     width: 100vw;
     height:60vh;
-    text-indent: 1vw;
     padding: 0;
-    bottom: -44vh;
+    bottom: -50vh;
     left:0;
     z-index: 4;
 }
 .carousel-caption h4{
     padding: 0;
     margin: 0;
-    min-height: 16vh;
+    min-height: 10vh;
     line-height: 4vh;
     font-size: 5.2vw;
 }
 .carousel-caption .intro{
-    height: 44vh;
-    overflow: scroll;
-    z-index: 4;
+	text-align: justify;
+	position: fixed;
+	padding: 0vh 2vw;
+	margin: 0 2vw;
+    height: 48vh;
+    overflow-y: auto;
+	overflow-x: hidden;
+	z-index: 4;
 }
-.carousel-caption p{
-    padding: 0 5vw 5vw 5vw;
-    text-align: justify;
-    z-index: 4;
+.intro::-webkit-scrollbar-thumb {
+    border-radius: 0.5vw;
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.5);
 }
 .carousel-caption #arrowUp{
     display: block;
