--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -16,8 +16,7 @@ body {
     font-family: 'GlacialIndifference', Fallback, sans-serif;
     min-height: 100vh;
     min-width: 100%;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     font-family: 'Gilroy-Light', Fallback, sans-serif;
@@ -31,14 +30,15 @@ body {
     font-weight: 400;
 }
 ::-webkit-scrollbar {
-    display: none;
+    width: 0.5vw;
 }
-
-body {
-    overflow-x: hidden;
-	font: 14px arial, sans-serif;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
 }
-
+::-webkit-scrollbar-thumb {
+    border-radius: 0.5vw;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+}
 /*navigation bar*/
 .navbar {
 	position: absolute;
@@ -92,8 +92,7 @@ body {
     min-height: 100vh;
     margin:0;
     padding:0;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 .container{
 	position: absolute;
@@ -103,7 +102,7 @@ body {
 	top: 0;
 	padding: 0;
 	margin-top: 9vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	z-index:1;
 }
