--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -20,9 +20,11 @@ body {
 }
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     font-family: 'Gilroy-Light', Fallback, sans-serif;
+    font-size: 5vw;
 }
 .h1, .h2, h1, h2{
     font-family: 'Gilroy-ExtraBold', Fallback, sans-serif;
+    font-size: 8vw;
 }
 .p, .span, .input, p, span, input, div {
     font-family: 'GlacialIndifference', Fallback, sans-serif;
@@ -30,7 +32,7 @@ body {
     font-weight: 400;
 }
 ::-webkit-scrollbar {
-    width: 0.5vw;
+    width: 0.8vw;
 }
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
