--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -35,11 +35,11 @@ body {
     width: 0.8vw;
 }
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
+    //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
 }
 ::-webkit-scrollbar-thumb {
     border-radius: 0.5vw;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 /*navigation bar*/
 .navbar {
@@ -99,12 +99,12 @@ body {
 .container{
 	position: absolute;
 	text-align: center;
-	width: 100%;
+	width: 100vw;
 	height: 91vh;
 	top: 0;
 	padding: 0;
 	margin-top: 9vh;
-	overflow-y: auto;
+	overflow-y: overlay;
 	overflow-x: hidden;
 	z-index:1;
 }
@@ -151,5 +151,5 @@ body {
     left:0;
     height: 100%;
     width: 100%;
-	z-index: 3;
+	z-index: 99;
 }
