--- a/www/css/shift-styles-schedule.css
+++ b/www/css/shift-styles-schedule.css
@@ -100,3 +100,333 @@
     li>i{
         float: right;
     }*/
+
+
+*{
+    margin:0;
+    padding:0;
+}
+
+
+::-webkit-scrollbar {
+    width: 0;
+    display: none;
+}
+
+body {
+    overflow: hidden;
+}
+
+.scheBody {
+    height: 91vh;
+}
+
+/*choosing date*/
+.date
+{
+    background-color: #fec248;
+    text-align: center;
+    margin-bottom: 0;
+    height: 4vh;
+}
+
+.date div{
+    display: inline-block;
+    padding-top: 0;
+    margin-top: 0;
+    height: 4vh;
+}
+
+
+.day {
+    width: 39.59vw;
+    height: 4vh;
+    background-color: #fec248;
+    margin-top: 0;
+    text-align: center;
+    font-size: 3vw;
+    padding-top: 0.9vw;
+    font-family: Gilroy-Light;
+    color: rgb(74,56,16);
+    padding: 0;
+    margin-bottom: 0;
+}
+
+.date p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.tues {
+    background-color: rgb(250,230,149);
+}
+/*end of choosing date*/
+
+/*content*/
+
+.padding {
+    padding: 0;
+}
+
+.schedule {
+    width: 100%;
+    overflow: auto;
+    height: 87vh;
+    white-space: nowrap;
+    padding: 0;
+    overflow-y: hidden;
+    height: 100%;
+}
+
+.time {
+    height: 3vh;
+    font-size: 0;
+    margin-left: 12vw;
+}
+
+
+.time p {
+    display: inline-block;
+    width: 30vw;
+    font-family: Gilroy-Light;
+    font-size: 2.5vh;
+    height: 3vh;
+    margin-bottom: 0;
+    margin-top:0;
+    text-align: left;
+}
+
+.info {
+    display:flex;
+    flex-direction: column;
+    height: 84vh;
+    width: 100%;
+}
+
+.child {
+    width: 100%;
+    height: 16.8vh;
+
+}
+
+
+.area {
+    float: left;
+    width: 17.5vw;
+    background-color: #e74696;
+    padding: 0;
+    margin: 0;
+    height: 17vh;
+    z-index: 4;
+    position: absolute;
+}
+
+
+
+
+.area h5 {
+    margin-top: 0;
+    font-family: Gilroy-Light;
+    color: #fff;
+    text-align: center;
+    font-size: 4vw;
+    margin-top: 4vh;
+    margin-bottom: 0;
+    margin-right: 0;
+    line-height: 4vh;
+}
+
+
+/*
+.area div {
+    height: 17vh;
+    font-family: Gilroy-Light;
+    width: 14vw;
+    text-align: center;
+    background-color: #e74696;
+    border-bottom: 0.3vw solid grey;
+}
+*/
+
+/*
+.area div:nth-child(1) {
+    margin-top: 42%;
+}
+*/
+
+
+
+/*
+.box {
+    word-wrap: break-word;
+    text-align: left;
+    height: 17.2vh;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin: 1px;
+    width: 30vw;
+    font-size: 2vw;
+}
+*/
+
+.box {
+    height: 16.8vh;
+    position: relative;
+    background-color: #fedf9f;
+    margin-left: 0;
+    box-sizing: border-box;
+    width: 45vw;
+}
+
+
+
+
+.child {
+    font-size : 0;
+}
+
+.main-stage .box {
+    display: inline-block;
+    padding: 0;
+}
+
+.park .box {
+    display: inline-block;
+    padding: 0;
+}
+
+.summerstage .box {
+    display: inline-block;
+    padding: 0;
+}
+
+.lordscellar .box {
+    display: inline-block;
+    padding: 0;
+}
+
+.workshop .box {
+    display: inline-block;
+    padding: 0;
+}
+
+.tick {
+    background-color: #fec248;
+    margin-bottom: 0;
+    height: 3vh;
+}
+
+.tick i {
+    float: right;
+    font-size: 3.5vw;
+    color: #fff;
+    padding: 0.2vw;
+    margin-top: 0.6vh;
+}
+
+.detail {
+    height: 13.8vh;
+    background-color: #fedf9f;
+    display: inline;
+}
+
+
+.etime {
+    line-height: 3vh;
+    font-family: Gilroy-Light;
+    font-size: 4vw;
+    position: absolute;
+    margin-left: 1vw;
+    text-align: left;
+    margin-top: 0.7vh;
+}
+
+.title {
+    font-family: Gilroy-ExtraBold;
+    font-size: 4.5vw;
+    margin-left: 1vw;
+    position: absolute;
+    text-align: left;
+    white-space: pre-wrap;
+    line-height: 2.2vh;
+    margin-top: 5vh;
+}
+
+.desc {
+    font-family: Gilroy-ExtraBold;
+    font-size: 3.5vw;
+    position: absolute;
+    margin-left: 1vw;
+    text-align: left;
+    white-space: pre-wrap;
+    line-height: 2.2vh;
+    margin-top: 8vh;
+}
+
+.six {
+    width: 180vw;
+}
+
+.five {
+    width: 150vw;
+}
+
+.four {
+    width: 120vw;
+}
+
+.three {
+    width: 90vw;
+}
+
+.two {
+    width: 60vw;
+}
+
+.one {
+    width: 30vw;
+}
+
+.n-0 {
+    margin-right: 0;
+}
+
+.n-1 {
+    margin-right: 30vw;
+}
+
+.n-2 {
+    margin-right: 60vw;
+}
+
+.n-3 {
+    margin-right: 90vw;
+}
+
+.n-8 {
+    margin-right: 240vw;
+}
+
+.s-0 {
+    margin-left: 17vw;
+}
+
+.s-1 {
+    margin-left: 47vw;
+}
+
+.s-2 {
+    margin-left: 77vw;
+}
+
+.s-3 {
+    margin-left: 107vw;
+}
+
+.s-4 {
+    margin-left: 137vw;
+}
+
+
+
