--- a/www/css/shift-styles.css
+++ b/www/css/shift-styles.css
@@ -27,7 +27,9 @@ body {
 .h1, .h2, h1, h2{
     font-family: 'Gilroy-ExtraBold', Fallback, sans-serif;
     font-size: 7vw;
-	color: #370c2c;
+}
+.h5, h5 {
+	font-size: 4.5vw;
 }
 #paragraph p{
 	text-align: justify;
@@ -157,7 +159,7 @@ a:hover, a:active, a:focus {
 .divider{
 	width: 60vw;
 }
-input[type="button"]{
+input[type="button"], input[type="submit"]{
 	padding: 0.5vh;
 	min-width: 50vw;
 	margin: 4vh auto;
@@ -261,4 +263,34 @@ input[type="button"]{
     height: 100%;
     width: 100%;
 	z-index: 99;
+}
+.checkedComponent{
+	background-color: #eee;
+	font-weight: 900;
+}
+#votingForm{
+	padding-top: 2vh;
+}
+#votingCompetititors{
+	height:50vh;
+	width:99vw;
+	overflow-y: scroll;
+}
+#votingCompetititors input[type="checkbox"]{
+
+}
+#votingForm label{
+	width: 98%;
+	height: 9vh;
+	font-size: 3vh;
+	line-height: 8.5vh;
+	padding:0;
+	margin:0.5vw 0;
+	border-bottom: 0.3vh solid #eee;
+}
+#votingForm label:first-child {
+	margin-top: 0;
+}
+#votingForm label:last-child {
+	margin-bottom: 0;
 }
