--- a/www/css/carousel.css
+++ b/www/css/carousel.css
@@ -78,10 +78,22 @@ ol{
     line-height: 4vh;
     color: #f7f7f8;
 }
-.carousel-control.right, .carousel-control.left {
+.carousel-control.right {
     background-image: none;
     background-color: none;
-    height: 20vh;
+    height: 5vh;
+    right:0;
+    width:8vw;
+    top:0.75vh;
+}
+
+.carousel-control.left {
+    background-image: none;
+    background-color: none;
+    height: 5vh;
+    width:8vw;
+    left:0;
+    top:0.75vh;
 }
 .carousel-control.right i, .carousel-control.left i{
     display: none;
@@ -102,4 +114,12 @@ ol{
 }
 .carousel-caption h4{
 	color: #fff;
+}
+.carousel-control:hover,
+.carousel-control:focus {
+  color: #fff;
+  text-decoration: none;
+  filter: alpha(opacity=90);
+  outline: 0;
+  opacity: .5;
 }
