--- a/www/css/speaker3.css
+++ b/www/css/speaker3.css
@@ -57,7 +57,8 @@
     height:5vh;
 }
 .vivid-simple-accordion h3 {
-    margin-bottom: 0
+    margin-bottom: 0;
+	text-align: left;
 }
 .vivid-simple-accordion em {
     color: #af286e
