--- a/www/css/kakola.css
+++ b/www/css/kakola.css
@@ -16,7 +16,7 @@
     text-align:justify;
     padding-left:4vw;
     padding-right:4vw;
-    background-image:url('../img/shift-graphic-right-top.png');
+    /*background-image:url('../img/shift-graphic-right-top.png');*/
     background-repeat:no-repeat;
 }
 
